@@ -4,10 +4,15 @@ CHANGELOG.txt
 0.6.2
 - the title line restricts the media list to what its text
 - clear button in the filter edit line
+- no more context menu in the info view
+- deep source organisation change
+- first version of connection checker, may freeze the GUI
+
 
 0.6.1
 - imdb updating is done in its own thread, it is now stoppable
 - collection rescan is possible, thanks to kushal
+
 
 0.6
 - first fully operationnal imdb research!
